test/compiler/invalid_programs/classes/infinite_size.jm
#!TypeError

class Infinite
  child:Infinite
end
